# mitsusplit

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  do  rust-toolchain.toml  sdkconfig.defaults
front/backend-test/: server.py
front/web-demo/: vue.config.js
front/web-demo/public/: index.html
front/web-provision/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_prov.c  app_prov.h  mitsusplit.h  mqtt.c  provisioning.c  rest_server.c  wifi.c  wifi.h
src/: app_net.rs  app_prov.rs  emb_test.rs  led_esp32_c3_13.rs  main.rs
