[package]
name = "mitsusplit"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"
resolver = "2"
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.30", features = ["binstart", "pio"] }
esp-idf-svc = "0.37"
esp-idf-hal = "0.33"
embedded-svc = "0.17"
embedded-hal = "0.2"
bitvec = "1"

[build-dependencies]
embuild = "0.28"
anyhow = "1"

# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }

